<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_color_light"
    android:id="@+id/cart_fragment_layout">

    <RelativeLayout
        android:id="@+id/cart_title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color_secondary"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/nav_cart"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cart_title_container"
        android:fillViewport="true"
        android:paddingTop="2dp"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="90dp">

            <RelativeLayout
                android:id="@+id/no_items_in_cart_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/no_items_in_cart_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_cart"
                    android:layout_centerHorizontal="true"
                    android:textSize="17sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/find_something"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find_something"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/no_items_in_cart_title"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/order_recycler_view_products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:scrollbars="vertical"
                android:layout_below="@id/no_items_in_cart_container"
                android:orientation="vertical"
                android:paddingBottom="20dp"/>

            <LinearLayout
                android:id="@+id/final_price_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_below="@id/order_recycler_view_products">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/final_price"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/final_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100PLN"
                    android:layout_marginTop="1dp"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttons_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_below="@id/final_price_container">

                <ImageButton
                    android:id="@+id/share_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/app_color_primary"
                    android:src="@drawable/ic_baseline_ios_share_24"
                    android:layout_marginRight="30dp"/>

                <Button
                    android:id="@+id/order_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/make_an_order"/>

            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>